Updated with Comments

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
     </p>
   </header>
 
+<!-- Flexbox Card -->
   <main>
     <section class="row justify-center">
       <div class="card-column">
@@ -38,6 +39,8 @@
 }</code></pre>
         </figure>
       </div>
+
+<!-- Flexbox Column -->
       <div class="card-column">
         <figure class="card code-card">
           <h2 class="card-header">Flexbox Column</h2>
@@ -51,6 +54,7 @@
         </figure>
       </div>
 
+<!-- Flexbox CSS Grid Layout -->
       <div class="card-column">
         <figure class="card code-card">
           <h2 class="card-header">CSS Grid Layout</h2>
@@ -64,6 +68,8 @@
 }</code></pre>
         </figure>
       </div>
+
+<!-- Linear Gradients -->
       <div class="card-column">
         <figure class="card code-card">
           <h2 class="card-header">Linear Gradients</h2>
@@ -78,6 +84,8 @@
 }</code></pre>
         </figure>
       </div>
+
+<!-- Box Transition Glow -->
       <div class="card-column">
         <figure class="card code-card">
           <h2 class="card-header">Box Transition Glow</h2>
@@ -96,6 +104,7 @@
         </figure>
       </div>
 
+<!-- Overlay Card with Title -->
       <div class="card-column">
         <figure class="card code-card">
           <h2 class="card-header">Overlay Card with Title</h2>
